# xmp

./: Cargo.toml  file.xmp  new.xmp  somefile.xmp
assets/: 3.xmp  exempi.xmp  f.xmp  missing_ns.xmp
benches/: read.rs  write.rs
minidom/: Cargo.toml
minidom/src/: element.rs
src/: default.xmp  errors.rs  jpg.rs  lib.rs  main.rs  orientation.rs  png.rs  raw.rs  time.rs  traits.rs  xml.rs
