[package]
name = "xmp"
version = "0.9.4"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.11.2"
thiserror = "1.0.31"

chrono = "0.4.19"
quick-xml = "*"

minidom = { version = "*", path = "minidom", registry = "ktra" }

kamadak-exif = { version = "0.5.4", optional = true }
img-parts = { version = "0.2.3", optional = true }
jfifdump = { git = "https://github.com/aftershootco/jfifdump" , optional = true }
libraw_r = { version = "*", optional = true, registry = "ktra" }
iso8601 = "0.5.0"
paste = "1.0.7"
bytes = "0.5.3"

[features]
jpeg = ["dep:jfifdump", "dep:kamadak-exif", "dep:img-parts"]
png = ["dep:img-parts", "dep:kamadak-exif"]
raw = ["dep:libraw_r"]
default = ["jpeg", "raw", "png"]

[dev-dependencies]
criterion = { version = "0.3.5", default-features = false }

[[bench]]
name = "read"
harness = false

[[bench]]
name = "write"
harness = false

# [patch.crates-io]
# img-parts = { path = "../img-parts" }
